// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MiniCart /> component should match the snapshot in popup mode 1`] = `
<DocumentFragment>
  <div
    class="pixel-mock"
  >
    <aside
      class="container relative fr flex items-center"
    >
      <div
        class="flex flex-column"
      >
        <button
          variation="tertiary"
        >
          Button Test
          <span
            class="flex items-center"
          >
            <span
              class="relative gray"
            >
              <svg
                class="undefined IconCart"
              >
                <rect />
              </svg>
              <span
                class="badge c-on-emphasis absolute t-mini bg-emphasis br4 w1 h1 pa1 flex justify-center items-center lh-solid"
              >
                1
              </span>
            </span>
          </span>
        </button>
        <div>
          <div>
            <div
              class="box dn db-ns absolute z-max flex flex-colunm"
              style="right: -40px;"
            >
              <div
                class="shadow-3"
              >
                <div
                  class="arrowUp absolute top-0 shadow-3 bg-base h1 w1 pa4 rotate-45"
                />
                <div
                  class="mt3 bg-base relative flex flex-column"
                >
                  <div
                    class="content overflow-x-hidden pa1 contentSmall bg-base overflow-y-hidden"
                  >
                    <section
                      class="relative flex"
                    >
                      <div
                        class="fr absolute top-0 right-0"
                      >
                        <button
                          variation="tertiary"
                        >
                          Button Test
                          <svg
                            class="undefined IconDelete"
                            height="15"
                            width="15"
                          >
                            <rect
                              height="15"
                              width="15"
                            />
                          </svg>
                        </button>
                      </div>
                      <div>
                         Extension Point 
                      </div>
                    </section>
                  </div>
                  <div
                    class="contentFooter w-100 bg-base pa4 pv5 flex flex-column items-end"
                  >
                    <div
                      class="contentPrice mb3"
                    >
                      <div
                        class="price-mock"
                      >
                        Price
                      </div>
                    </div>
                    <div
                      class=""
                    >
                      <button
                        variation="primary"
                      >
                        Button TestGo to checkout
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </aside>
  </div>
</DocumentFragment>
`;

exports[`<MiniCart /> component should match the snapshot in sidebar mode 1`] = `
<body
  class=""
>
  <div>
    <div
      class="pixel-mock"
    >
      <aside
        class="container relative fr flex items-center"
      >
        <div
          class="flex flex-column"
        >
          <button
            variation="tertiary"
          >
            Button Test
            <span
              class="flex items-center"
            >
              <span
                class="relative gray"
              >
                <svg
                  class="undefined IconCart"
                >
                  <rect />
                </svg>
                <span
                  class="badge c-on-emphasis absolute t-mini bg-emphasis br4 w1 h1 pa1 flex justify-center items-center lh-solid"
                >
                  1
                </span>
              </span>
            </span>
          </button>
          <div>
            <div>
              <div
                class="sidebarScrim fixed dim bg-base--inverted top-0 left-0 z-9999 w-100 vh-100 o-40 dn"
                style="will-change: opacity;"
              />
              <div
                class="animation-mock"
              >
                <div
                  class="sidebarHeader pointer flex flex-row items-center pa5 h3 bg-base w-100 z-max bb b--muted-3 bw1"
                >
                  <div
                    class="c-muted-1 pa4 flex items-center"
                  >
                    <svg
                      class="undefined IconCaret"
                      height="17"
                      width="17"
                    >
                      <rect
                        height="17"
                        width="17"
                      />
                    </svg>
                  </div>
                  <div
                    class="relative c-muted-1"
                  >
                    <svg
                      class="undefined IconCart"
                    >
                      <rect />
                    </svg>
                    <span
                      class="badge c-on-emphasis absolute t-mini bg-emphasis br4 w1 h1 pa1 flex justify-center items-center lh-solid"
                    >
                      1
                    </span>
                  </div>
                  <span
                    class="label dn-m db-l t-action--small pl6 c-muted-1"
                  >
                    My mini cart
                  </span>
                </div>
                <div
                  class="content overflow-x-hidden pa1 contentLarge"
                >
                  <section
                    class="relative flex"
                  >
                    <div
                      class="fr absolute top-0 right-0"
                    >
                      <button
                        variation="tertiary"
                      >
                        Button Test
                        <svg
                          class="undefined IconDelete"
                          height="15"
                          width="15"
                        >
                          <rect
                            height="15"
                            width="15"
                          />
                        </svg>
                      </button>
                    </div>
                    <div>
                       Extension Point 
                    </div>
                  </section>
                </div>
                <div
                  class="contentFooter w-100 bg-base pa4 pv5 flex flex-column items-end bt b--muted-3"
                >
                  <div
                    class="contentPrice mb3"
                  >
                    <div
                      class="price-mock"
                    >
                      Price
                    </div>
                  </div>
                  <div
                    class="bb bw4 bw2-m b--transparent"
                  >
                    <button
                      variation="primary"
                    >
                      Button Test
                      Go to checkout
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </aside>
    </div>
  </div>
</body>
`;
